# btc-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/btc_analysis/: __init__.py  cli.py  config.py
src/btc_analysis/analysis/: __init__.py  cash_substitution.py  combined_substitution.py  criminal_events.py  criminal_floor.py  criminal_proxies.py  cross_sectional.py  stablecoin_analysis.py  time_series.py  time_trend_model.py
src/btc_analysis/data/: __init__.py  aml.py  btc_price.py  capital_controls.py  cbp_currency.py  cbp_seizures.py  cdc_overdose.py  crime.py  imf.py  privacy_tools.py  stablecoins.py  world_bank.py
src/btc_analysis/processing/: __init__.py  merge.py  merge_timeseries.py
