[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-analysis"
version = "0.1.0"
description = "Bitcoin regulatory arbitrage analysis - testing the hypothesis that BTC price floor is sustained by capital flight demand"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.0",
    "beautifulsoup4>=4.12.0",
    "linearmodels>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
btc-analysis = "btc_analysis.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
